fix: align tabs to bottom of toolbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,13 +7,22 @@
 .toolbar-content {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0;
   width: 100%;
   box-sizing: border-box;
 }
 
 .app-tabs {
   max-width: 500px;
+}
+
+::ng-deep .app-toolbar .mat-mdc-tab-group {
+  padding-bottom: 0;
+  
+  .mat-mdc-tab-header {
+    padding-bottom: 0;
+    margin-bottom: -16px;
+  }
 }
 
 .watchlist-badge {
